[project]
name = "nonebot-plugin-gpt"
version = "0.0.38"
description = "Nonebot2's plugin of ChatGPT "
authors = [
    {name = "nek0us", email = "nekouss@mail.com"},
]
license = {text = "GPL3"}
dependencies = ["ChatGPTWeb>=0.2.41","nonebot_adapter_onebot>=2.3.1","nonebot-plugin-sendmsg-by-bots>=0.1.6","nonebot_adapter_qq>=1.3.5","nonebot2>=2.0.0","more_itertools","nonebot_plugin_htmlrender","nonebot_plugin_localstore"]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nek0us/nonebot-plugin-gpt"
Repository = "https://github.com/nek0us/nonebot-plugin-gpt"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"